--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+  font-size: 20px;
 }
 
 header {
@@ -56,7 +57,7 @@ main {
   width: 100%;
   margin: 0 auto;
   padding: 0;
-  background-color: lightgray;
+  background-color: rgb(214, 205, 205);
 }
 
 .hero-section {
@@ -191,4 +192,114 @@ main {
   margin-bottom: 15px;
 }
 
+.schedule-page {
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 1800px;
+  margin: 0 auto;
+}
+
+.schedule-header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.schedule-header h1 {
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+
+.schedule-header p {
+  font-size: 16px;
+  color: gray;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  width: 100%;
+}
+
+.guidelines,
+.tips {
+  flex: 1;
+  margin: 0 10px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.guidelines h2,
+.tips h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.form-container {
+  text-align: center;
+  margin: 40px 0;
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.form-container h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.form-container input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.form-container button {
+  padding: 10px 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.form-container button:hover {
+  background-color: rgb(120, 150, 12);
+}
+
+.sessions-list h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.sessions-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sessions-list li {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.sessions-list h3 {
+  margin: 0 0 5px;
+}
+
+.sessions-list p {
+  margin: 5px 0;
+  color: gray;
+}
 
