--- a/client/src/index.css
+++ b/client/src/index.css
@@ -78,10 +78,11 @@ header nav a:hover {
 }
 
 .footer-section a {
-  color: white;
+  color: blue;
   text-decoration: none;
   font-size: 15px;
 }
+
 
 .footer-bottom {
   text-align: center;
@@ -633,7 +634,7 @@ main {
 }
 
 .form-container button:hover {
-  background-color: darkgreen;
+  background-color:rgb(137, 179, 60);
 }
 
 .collaborations-list h2 {
@@ -673,4 +674,147 @@ main {
 
 .join-button:hover {
   background-color: darkblue;
+}
+
+
+
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url('./pages/images/background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.login-container {
+  width: 100%;
+  max-width: 400px;
+  padding: 40px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.login-container h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.login-container input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.login-container button {
+  width: 100%;
+  padding: 10px;
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.login-container button:hover {
+  background-color: rgb(137, 179, 60);
+}
+
+.signup-link {
+  margin-top: 20px;
+}
+
+.signup-link p {
+  font-size: 15px;
+}
+
+.signup-link a {
+  color: blue;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
+
+
+.register-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-image: url('./pages/images/background4.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.register-container {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+}
+
+.register-container h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.register-container input {
+  display: block;
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.register-container button {
+  padding: 10px 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.register-container button:hover {
+  background-color: rgb(137, 179, 60);
+}
+
+.login-link {
+  margin-top: 10px;
+}
+
+.login-link p {
+  font-size: 15px;
+  color: gray;
+}
+
+.login-link a {
+  color: blue;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.login-link a:hover {
+  text-decoration: underline;
 }
