--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,6 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   background-color: whitesmoke;
 }
 
@@ -99,11 +98,10 @@ main {
 
 
 
+
 .home-container {
   width: 100%;
-  margin: 0 auto;
   padding: 0;
-  background-color: rgb(214, 205, 205);
 }
 
 .hero-section {
@@ -111,7 +109,6 @@ main {
   background: rgb(60, 179, 113);
   color: white;
   text-align: center;
-  margin-bottom: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -156,7 +153,7 @@ main {
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 30px 0;
+  margin: 40px 0;
 }
 
 .features-section h2,
@@ -201,19 +198,54 @@ main {
   font-size: 50px;
 }
 
+.additional-sections {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.benefits-section,
+.involved-section {
+  flex: 1;
+  margin-right: 20px;
+  background-color: white;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.benefits-section:last-child,
+.involved-section:last-child {
+  margin-right: 0;
+}
+
+.benefits, .involved {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.benefit, .involvement {
+  flex: 1;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
 .testimonials {
   text-align: center;
 }
 
 .testimonial {
   max-width: 600px;
-  margin: 0 auto 20px;
+  margin: 20px auto; 
   font-size: 20px;
   color: dimgray;
 }
 
 .cta-section {
-  background-color:rgb(60, 179, 113);
+  background-color: rgb(60, 179, 113);
   color: white;
   padding: 60px 20px;
   border-radius: 8px;
@@ -818,3 +850,4 @@ main {
 .login-link a:hover {
   text-decoration: underline;
 }
+
